# Technical_Task

./: .gitignore  README.md  explanation.md  pyproject.toml
app/: __init__.py  config.py  labels.py
app/api/: __init__.py  main.py
app/data/: dataset.py  manifest.py  video_reader.py
app/evaluation/: reporting.py
app/inference/: predictor.py
app/models/: video_classifier.py
app/training/: checkpoints.py  engine.py  metrics.py
app/utils/: device.py  seed.py
configs/: baseline.json
scripts/: evaluate.py  evaluate_real_videos.py  prepare_dataset.py  train.py
tests/: test_manifest.py  test_metrics.py
