[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "violence-video-classifier"
version = "0.1.0"
description = "PyTorch pipeline for violence / non-violence video classification."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "numpy>=2.0.0,<3.0.0",
    "opencv-python-headless>=4.10.0,<5.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "safetensors>=0.5.0,<1.0.0",
    "torch>=2.7.0,<3.0.0",
    "torchvision>=0.22.0,<1.0.0",
    "tqdm>=4.67.0,<5.0.0",
    "uvicorn>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
